Launchpad automatic translations update.

--- a/po/de.po
+++ b/po/de.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: update-manager\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2013-05-22 21:30+0100\n"
-"PO-Revision-Date: 2013-05-24 20:42+0000\n"
+"PO-Revision-Date: 2013-06-04 08:35+0000\n"
 "Last-Translator: Hendrik Knackstedt <Unknown>\n"
 "Language-Team: German GNOME Translations <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-05-31 06:17+0000\n"
+"X-Launchpad-Export-Date: 2013-06-05 05:54+0000\n"
 "X-Generator: Launchpad (build 16660)\n"
 "Language: \n"
 
@@ -1319,7 +1319,7 @@ msgstr "Fehler"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:572
 msgid "&Cancel"
-msgstr ""
+msgstr "Ab&brechen"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:817
 msgid "&Close"
@@ -1823,7 +1823,7 @@ msgstr "Eine Systemaktualisierung durchführen"
 
 #: ../data/com.ubuntu.release-upgrader.policy.in.h:2
 msgid "To upgrade Ubuntu, you need to authenticate."
-msgstr ""
+msgstr "Um Ubuntu zu aktualisieren, müssen Sie sich authentifizieren."
 
 #: ../data/com.ubuntu.release-upgrader.policy.in.h:3
 msgid "Perform a partial upgrade"
@@ -1832,6 +1832,8 @@ msgstr "Eine teilweise Systemaktualisierung durchführen"
 #: ../data/com.ubuntu.release-upgrader.policy.in.h:4
 msgid "To perform a partial upgrade, you need to authenticate."
 msgstr ""
+"Um eine teilweise Systemaktualisierung durchzuführen, müssen Sie sich "
+"authentifizieren."
 
 #: ../do-partial-upgrade:67 ../do-release-upgrade:69
 msgid "Show version and exit"
