--- a/po/nb.po
+++ b/po/nb.po
@@ -8,19 +8,19 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2013-05-22 21:30+0100\n"
-"PO-Revision-Date: 2013-05-22 11:00+0000\n"
-"Last-Translator: Brian Murray <brian@ubuntu.com>\n"
+"PO-Revision-Date: 2013-06-17 07:32+0000\n"
+"Last-Translator: Åka Sikrom <Unknown>\n"
 "Language-Team: Norwegian Bokmal <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-05-31 06:18+0000\n"
-"X-Generator: Launchpad (build 16660)\n"
+"X-Launchpad-Export-Date: 2013-06-18 06:30+0000\n"
+"X-Generator: Launchpad (build 16673)\n"
 "Language: nb\n"
 
 #. TRANSLATORS: %s is a country
-#: ../DistUpgrade/distro.py:206 ../DistUpgrade/distro.py:436
+#: ../DistUpgrade/distro.py:207 ../DistUpgrade/distro.py:437
 #, python-format
 msgid "Server for %s"
 msgstr "Tjener for %s"
@@ -28,12 +28,12 @@ msgstr "Tjener for %s"
 #. More than one server is used. Since we don't handle this case
 #. in the user interface we set "custom servers" to true and
 #. append a list of all used servers
-#: ../DistUpgrade/distro.py:224 ../DistUpgrade/distro.py:230
-#: ../DistUpgrade/distro.py:246
+#: ../DistUpgrade/distro.py:225 ../DistUpgrade/distro.py:231
+#: ../DistUpgrade/distro.py:247
 msgid "Main server"
 msgstr "Hovedtjener"
 
-#: ../DistUpgrade/distro.py:250
+#: ../DistUpgrade/distro.py:251
 msgid "Custom servers"
 msgstr "Egendefinerte tjenere"
 
@@ -144,6 +144,8 @@ msgid ""
 "If none of this applies, then please report this bug using the command "
 "'ubuntu-bug ubuntu-release-upgrader-core' in a terminal."
 msgstr ""
+"Hvis alt dette er irrelevant, ber vi om at du rapporterer denne feilen ved å "
+"kjøre kommandoen «ubuntu-bug ubuntu-release-upgrader-core» i en terminal."
 
 #: ../DistUpgrade/DistUpgradeCache.py:711
 msgid "Could not calculate the upgrade"
@@ -190,6 +192,9 @@ msgid ""
 "It was impossible to install a required package. Please report this as a bug "
 "using 'ubuntu-bug ubuntu-release-upgrader-core' in a terminal."
 msgstr ""
+"Det ser ut til å være umulig å installere en påkrevet programpakke. "
+"Vennligst rapporter dette som en feil ved å skrive «ubuntu-bug ubuntu-"
+"release-upgrader-core» i et terminalvindu."
 
 #. FIXME: provide a list
 #: ../DistUpgrade/DistUpgradeCache.py:926
@@ -324,6 +329,11 @@ msgid ""
 "*No* changes written to a system directory from now until the next reboot "
 "are permanent."
 msgstr ""
+"Oppgraderingen kjører nå i sandkasse(test-)modus. Alle endringer skrives til "
+"'%s', og går tapt neste gang du starter maskinen på nytt.\n"
+"\n"
+"*Alle* endringer som gjøres i systemmapper fra nå og frem til neste omstart "
+"vil gå tapt."
 
 #: ../DistUpgrade/DistUpgradeController.py:446
 msgid ""
@@ -358,6 +368,9 @@ msgid ""
 "upgrade can not continue.\n"
 "Please make sure that the system directory is writable."
 msgstr ""
+"Det er ikke mulig å skrive til systemmappa '%s' på systemet ditt. "
+"Oppgraderingen kan således ikke fortsette.\n"
+"Vennligst se til at systemmappen ikke er skrivebeskyttet."
 
 #: ../DistUpgrade/DistUpgradeController.py:497
 msgid "Include latest updates from the Internet?"
@@ -439,6 +452,8 @@ msgid ""
 "Upgrading the repository information resulted in a invalid file so a bug "
 "reporting process is being started."
 msgstr ""
+"Oppgradering av informasjon om pakkebrønner førte til en ugyldig fil. "
+"Starter feilrapportering."
 
 #: ../DistUpgrade/DistUpgradeController.py:817
 msgid "Third party sources disabled"
@@ -586,6 +601,12 @@ msgid ""
 "and attach the files in /var/log/dist-upgrade/ to the bug report.\n"
 "%s"
 msgstr ""
+"\n"
+"\n"
+"Vennligst gå til http://bugs.launchpad.net/ubuntu/+source/ubuntu-release-"
+"upgrader/+filebug i en nettleser og rapporter denne programfeilen. Filene i "
+"/var/log/dist-upgrade/ bør legges ved feilrapporten.\n"
+"%s"
 
 #: ../DistUpgrade/DistUpgradeController.py:1188
 msgid ""
@@ -643,6 +664,8 @@ msgid ""
 "Preparing the system for the upgrade failed so a bug reporting process is "
 "being started."
 msgstr ""
+"Noe gikk galt under forberedelser til systemoppgradering. Starter "
+"feilrapportering."
 
 #: ../DistUpgrade/DistUpgradeController.py:1646
 msgid "Getting upgrade prerequisites failed"
@@ -655,6 +678,11 @@ msgid ""
 "\n"
 "Additionally, a bug reporting process is being started."
 msgstr ""
+"Systemet klarte ikke å hente forberedelsesprogrammer for oppgraderingen. "
+"Oppgraderingen vil nå avbrytes, og systemet vil tilbakestilles til "
+"opprinnelig tilstand.\n"
+"\n"
+"I tillegg blir programfeilen innrapportert."
 
 #: ../DistUpgrade/DistUpgradeController.py:1675
 msgid "Updating repository information"
@@ -683,6 +711,13 @@ msgid ""
 "In the case of an overloaded mirror, you may want to try the upgrade again "
 "later."
 msgstr ""
+"Fant ikke den påkrevde pakken  '%s' etter å ha oppdatert pakkeoversikten "
+"din. Dette kan skyldes at du ikke har oppført offisielle speil (mirrors) som "
+"dine programvarekilder, eller at speiltjeneren du bruker har stor pågang. "
+"Sjekk /etc/apt/sources.list for å kontrollere hvilke speil du bruker som "
+"programvarekilder.\n"
+"Hvis det er sannsynlig at speiltjeneren er overbelastet, bør du forsøke å "
+"kjøre oppgraderingen på nytt senere."
 
 #: ../DistUpgrade/DistUpgradeController.py:1739
 #: ../DistUpgrade/DistUpgradeController.py:1795
@@ -744,7 +779,7 @@ msgstr "Vennligst kontoller forbindelsen til Internett."
 #: ../DistUpgrade/DistUpgradeFetcherCore.py:75
 #, python-format
 msgid "authenticate '%(file)s' against '%(signature)s' "
-msgstr ""
+msgstr "autentisere '%(file)s' mot '%(signature)s' "
 
 #: ../DistUpgrade/DistUpgradeFetcherCore.py:136
 #, python-format
@@ -761,6 +796,9 @@ msgid ""
 "This is most likely a bug in the upgrade tool. Please report it as a bug "
 "using the command 'ubuntu-bug ubuntu-release-upgrader-core'."
 msgstr ""
+"Dette er sannsynligvis en programfeil i oppgraderingsverktøyet. Vennligst "
+"rapporter feilen ved å kjøre kommandoen «ubuntu-bug ubuntu-release-upgrader-"
+"core»."
 
 #: ../DistUpgrade/DistUpgradeFetcherCore.py:236
 msgid "Upgrade tool signature"
@@ -876,11 +914,11 @@ msgstr "Sett inn «%s» i «%s»-leseren"
 msgid "Media Change"
 msgstr "Medieendring"
 
-#: ../DistUpgrade/DistUpgradeQuirks.py:207
+#: ../DistUpgrade/DistUpgradeQuirks.py:208
 msgid "evms in use"
 msgstr "evms i bruk"
 
-#: ../DistUpgrade/DistUpgradeQuirks.py:208
+#: ../DistUpgrade/DistUpgradeQuirks.py:209
 msgid ""
 "Your system uses the 'evms' volume manager in /proc/mounts. The 'evms' "
 "software is no longer supported, please switch it off and run the upgrade "
@@ -890,11 +928,12 @@ msgstr ""
 "Programvaren til «evms» er ikke lenger støttet, vennligst slå den av og kjør "
 "oppdateringen på nytt."
 
-#: ../DistUpgrade/DistUpgradeQuirks.py:511
+#: ../DistUpgrade/DistUpgradeQuirks.py:512
 msgid "Your graphics hardware may not be fully supported in Ubuntu 13.04."
 msgstr ""
+"Det er ikke sikkert at grafikkortet ditt støttes optimalt i Ubuntu 13.04."
 
-#: ../DistUpgrade/DistUpgradeQuirks.py:513
+#: ../DistUpgrade/DistUpgradeQuirks.py:514
 msgid ""
 "Running the 'unity' desktop environment is not fully supported by your "
 "graphics hardware. You will maybe end up in a very slow environment after "
@@ -903,23 +942,34 @@ msgid ""
 "https://wiki.ubuntu.com/X/Bugs/UpdateManagerWarningForUnity3D Do you still "
 "want to continue with the upgrade?"
 msgstr ""
+"Skrivebordsmiljøet Unity støtter ikke grafikkortet ditt optimalt. "
+"Oppgraderingen kan altså føre til at skrivebordsmiljøet vil kjøre veldig "
+"tregt. Vi anbefaler at du beholder LTS - din langtidsstøttede - versjon "
+"inntil videre. Se "
+"https://wiki.ubuntu.com/X/Bugs/UpdateManagerWarningForUnity3D for mer "
+"informasjon. Ønsker du likevel å fortsette med oppgraderingen?"
 
-#: ../DistUpgrade/DistUpgradeQuirks.py:535
+#: ../DistUpgrade/DistUpgradeQuirks.py:536
 msgid ""
 "Your graphics hardware may not be fully supported in Ubuntu 12.04 LTS."
 msgstr ""
+"Det er ikke sikkert at grafikkortet ditt støttes optimalt i Ubuntu 12.04 LTS."
 
-#: ../DistUpgrade/DistUpgradeQuirks.py:537
+#: ../DistUpgrade/DistUpgradeQuirks.py:538
 msgid ""
 "The support in Ubuntu 12.04 LTS for your Intel graphics hardware is limited "
 "and you may encounter problems after the upgrade. For more information see "
 "https://wiki.ubuntu.com/X/Bugs/UpdateManagerWarningForI8xx Do you want to "
 "continue with the upgrade?"
 msgstr ""
+"Ditt Intel-grafikkort har begrenset støtte i Ubuntu 12.04 LTS, og du kan "
+"møte problemer etter oppgraderingen. Se "
+"https://wiki.ubuntu.com/X/Bugs/UpdateManagerWarningForI8xx for mer "
+"informasjon. Ønsker du likevel å fortsette med oppgraderingen?"
 
-#: ../DistUpgrade/DistUpgradeQuirks.py:559
-#: ../DistUpgrade/DistUpgradeQuirks.py:587
-#: ../DistUpgrade/DistUpgradeQuirks.py:614
+#: ../DistUpgrade/DistUpgradeQuirks.py:560
+#: ../DistUpgrade/DistUpgradeQuirks.py:588
+#: ../DistUpgrade/DistUpgradeQuirks.py:615
 msgid ""
 "Upgrading may reduce desktop effects, and performance in games and other "
 "graphically intensive programs."
@@ -927,8 +977,8 @@ msgstr ""
 "Å oppgradere kan gå på bekostning av skrivebordseffekter, samt ytelse i "
 "spill og andre grafikkintensive programmer."
 
-#: ../DistUpgrade/DistUpgradeQuirks.py:563
-#: ../DistUpgrade/DistUpgradeQuirks.py:591
+#: ../DistUpgrade/DistUpgradeQuirks.py:564
+#: ../DistUpgrade/DistUpgradeQuirks.py:592
 msgid ""
 "This computer is currently using the NVIDIA 'nvidia' graphics driver. No "
 "version of this driver is available that works with your video card in "
@@ -942,7 +992,7 @@ msgstr ""
 "\n"
 "Ønsker du å fortsette?"
 
-#: ../DistUpgrade/DistUpgradeQuirks.py:618
+#: ../DistUpgrade/DistUpgradeQuirks.py:619
 msgid ""
 "This computer is currently using the AMD 'fglrx' graphics driver. No version "
 "of this driver is available that works with your hardware in Ubuntu 10.04 "
@@ -956,11 +1006,11 @@ msgstr ""
 "\n"
 "Ønsker du å fortsette?"
 
-#: ../DistUpgrade/DistUpgradeQuirks.py:648
+#: ../DistUpgrade/DistUpgradeQuirks.py:649
 msgid "No i686 CPU"
 msgstr "Ikke en i686 CPU"
 
-#: ../DistUpgrade/DistUpgradeQuirks.py:649
+#: ../DistUpgrade/DistUpgradeQuirks.py:650
 msgid ""
 "Your system uses an i586 CPU or a CPU that does not have the 'cmov' "
 "extension. All packages were built with optimizations requiring i686 as the "
@@ -972,11 +1022,11 @@ msgstr ""
 "er ikke mulig å oppgradere dette systemet til en ny versjon av Ubuntu med "
 "den nåværende komponentoppsett."
 
-#: ../DistUpgrade/DistUpgradeQuirks.py:685
+#: ../DistUpgrade/DistUpgradeQuirks.py:686
 msgid "No ARMv6 CPU"
 msgstr "Ingen ARMv6 prosessor"
 
-#: ../DistUpgrade/DistUpgradeQuirks.py:686
+#: ../DistUpgrade/DistUpgradeQuirks.py:687
 msgid ""
 "Your system uses an ARM CPU that is older than the ARMv6 architecture. All "
 "packages in karmic were built with optimizations requiring ARMv6 as the "
@@ -988,11 +1038,11 @@ msgstr ""
 "er ikke mulig å oppgradere systemet ditt til en ny Ubuntu versjon på dette "
 "systemet."
 
-#: ../DistUpgrade/DistUpgradeQuirks.py:706
+#: ../DistUpgrade/DistUpgradeQuirks.py:707
 msgid "No init available"
 msgstr "Ingen oppstartsprogrammer (init) tilgjengelig"
 
-#: ../DistUpgrade/DistUpgradeQuirks.py:707
+#: ../DistUpgrade/DistUpgradeQuirks.py:708
 msgid ""
 "Your system appears to be a virtualised environment without an init daemon, "
 "e.g. Linux-VServer. Ubuntu 10.04 LTS cannot function within this type of "
@@ -1659,7 +1709,7 @@ msgstr "Distribusjonsoppgradering"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:19
 msgid "<b><big>Upgrading Ubuntu to version 13.04</big></b>"
-msgstr ""
+msgstr "<b><big>Oppgraderer Ubuntu til versjon 13.04</big></b>"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:20
 msgid "    "
@@ -1708,10 +1758,12 @@ msgid ""
 "You can upgrade at a later time by opening Software Updater and click on "
 "\"Upgrade\"."
 msgstr ""
+"Du kan oppgradere senere ved å åpne prorgamvare oppdateren og klikke på "
+"«Oppgrader»."
 
 #: ../data/com.ubuntu.release-upgrader.policy.in.h:1
 msgid "Perform a release upgrade"
-msgstr ""
+msgstr "Utfør en versjonsoppgradering"
 
 #: ../data/com.ubuntu.release-upgrader.policy.in.h:2
 msgid "To upgrade Ubuntu, you need to authenticate."
@@ -1719,7 +1771,7 @@ msgstr ""
 
 #: ../data/com.ubuntu.release-upgrader.policy.in.h:3
 msgid "Perform a partial upgrade"
-msgstr ""
+msgstr "Utfør en delvis oppgradering"
 
 #: ../data/com.ubuntu.release-upgrader.policy.in.h:4
 msgid "To perform a partial upgrade, you need to authenticate."
@@ -1831,4 +1883,4 @@ msgstr "Du har avslått å oppgradere til Ubuntu %s"
 
 #: ../check-new-release-gtk:204
 msgid "Add debug output"
-msgstr ""
+msgstr "Legg til en utskrift av feilsøkingsdata"
