--- a/po/ru.po
+++ b/po/ru.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: update-manager\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2013-05-22 21:30+0100\n"
-"PO-Revision-Date: 2013-07-03 20:14+0000\n"
-"Last-Translator: Aleksey Kabanov <Unknown>\n"
+"PO-Revision-Date: 2013-07-04 15:35+0000\n"
+"Last-Translator: Igor Zubarev <igor.zubarev@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2013-07-04 05:44+0000\n"
-"X-Generator: Launchpad (build 16692)\n"
+"X-Launchpad-Export-Date: 2013-07-05 05:59+0000\n"
+"X-Generator: Launchpad (build 16696)\n"
 "Language: ru\n"
 
 #. TRANSLATORS: %s is a country
@@ -720,6 +720,12 @@ msgid ""
 "In the case of an overloaded mirror, you may want to try the upgrade again "
 "later."
 msgstr ""
+"После обновления информации о пакетах, не найден необходимый пакет '%s'. "
+"Возможно в ваших источниках приложений отсутствуют официальные зеркала или "
+"из-за превышения нагрузки на зеркало, которое вы используете. Проверьте "
+"список источников приложений /etc/apt/sources.list\n"
+"В случае превышения нагрузки зеркала вы можете повторить попытку обновления "
+"позже."
 
 #: ../DistUpgrade/DistUpgradeController.py:1739
 #: ../DistUpgrade/DistUpgradeController.py:1795
@@ -1274,7 +1280,7 @@ msgstr "Ошибка"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:572
 msgid "&Cancel"
-msgstr ""
+msgstr "&Отменить"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:817
 msgid "&Close"
