--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.197) UNRELEASED; urgency=low
+
+  * Disable proposed on upgrade to a development release (LP: #1199157).
+
+ -- Andrew Starr-Bochicchio <a.starr.b@gmail.com>  Mon, 08 Jul 2013 18:12:06 -0400
+
 ubuntu-release-upgrader (1:0.196) saucy; urgency=low
 
   * Re-sync the local copy of invoke-rc.d with the one from sysvinit.
