--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-ubuntu-release-upgrader (1:0.197) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.197) saucy; urgency=low
 
+  [ Andrew Starr-Bochicchio ]
   * Disable proposed on upgrade to a development release (LP: #1199157).
 
- -- Andrew Starr-Bochicchio <a.starr.b@gmail.com>  Mon, 08 Jul 2013 18:12:06 -0400
+ -- Brian Murray <brian@ubuntu.com>  Tue, 09 Jul 2013 11:40:52 -0700
 
 ubuntu-release-upgrader (1:0.196) saucy; urgency=low
 
