Add devel_release to options so that the fix for bug 1199157 really works (LP: #1200135)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.198) UNRELEASED; urgency=low
+
+  * Add devel_release to options so that the fix for bug 1199157 really works
+    (LP: #1200135)
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 11 Jul 2013 10:47:35 -0700
+
 ubuntu-release-upgrader (1:0.197) saucy; urgency=low
 
   [ Andrew Starr-Bochicchio ]
