--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.199) UNRELEASED; urgency=low
+
+  * Drop obsolete GObject.threads_init() calls to avoid warnings.  Bump
+    python-gi dependency.
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 12 Jul 2013 08:07:20 -0700
+
 ubuntu-release-upgrader (1:0.198) saucy; urgency=low
 
   * Add devel_release to options so that the fix for bug 1199157 really works
