Launchpad automatic translations update.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: update-manager HEAD\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2013-05-22 21:30+0100\n"
-"PO-Revision-Date: 2013-05-23 02:46+0000\n"
-"Last-Translator: 朱涛 <bill_zt@sina.com>\n"
+"PO-Revision-Date: 2013-07-20 01:56+0000\n"
+"Last-Translator: Wang Dianjin <Unknown>\n"
 "Language-Team: Chinese (simplified) <i18n-zh@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Launchpad-Export-Date: 2013-07-17 07:22+0000\n"
+"X-Launchpad-Export-Date: 2013-07-20 06:19+0000\n"
 "X-Generator: Launchpad (build 16696)\n"
 "Language: \n"
 
@@ -1141,7 +1141,7 @@ msgstr "错误"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:572
 msgid "&Cancel"
-msgstr ""
+msgstr "取消(&C)"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:817
 msgid "&Close"
@@ -1605,7 +1605,7 @@ msgstr "执行版本升级"
 
 #: ../data/com.ubuntu.release-upgrader.policy.in.h:2
 msgid "To upgrade Ubuntu, you need to authenticate."
-msgstr ""
+msgstr "升级 Ubuntu 版本前，您需要授权该操作。"
 
 #: ../data/com.ubuntu.release-upgrader.policy.in.h:3
 msgid "Perform a partial upgrade"
@@ -1613,7 +1613,7 @@ msgstr "执行部分升级"
 
 #: ../data/com.ubuntu.release-upgrader.policy.in.h:4
 msgid "To perform a partial upgrade, you need to authenticate."
-msgstr ""
+msgstr "进行部分升级前，您需要授权该操作。"
 
 #: ../do-partial-upgrade:67 ../do-release-upgrade:69
 msgid "Show version and exit"
