--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -3,14 +3,14 @@ msgstr ""
 "Project-Id-Version: update-manager 0.41.1\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2013-05-22 21:30+0100\n"
-"PO-Revision-Date: 2013-05-23 02:43+0000\n"
-"Last-Translator: Cheng-Chia Tseng <pswo10680@gmail.com>\n"
+"PO-Revision-Date: 2013-07-20 12:06+0000\n"
+"Last-Translator: Pin-hsien Li <pspeter9931@gmail.com>\n"
 "Language-Team: Chinese (Taiwan) <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Launchpad-Export-Date: 2013-07-17 07:22+0000\n"
+"X-Launchpad-Export-Date: 2013-07-22 05:57+0000\n"
 "X-Generator: Launchpad (build 16696)\n"
 "Language: \n"
 
@@ -620,6 +620,9 @@ msgid ""
 "In the case of an overloaded mirror, you may want to try the upgrade again "
 "later."
 msgstr ""
+"在更新您的套件資訊之後，無法定位必要的套件「%s」。這可能因為您沒有在軟體來源中列出官方鏡像站，或者是因為您正使用的鏡像站正忙碌超載。請見 "
+"/etc/apt/sources.list  以瞭解目前設定的軟體來源列表。\n"
+"若鏡像站正處於超載狀態，您可以過一段時間後再試著更新。"
 
 #: ../DistUpgrade/DistUpgradeController.py:1739
 #: ../DistUpgrade/DistUpgradeController.py:1795
@@ -818,7 +821,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeQuirks.py:511
 msgid "Your graphics hardware may not be fully supported in Ubuntu 13.04."
-msgstr ""
+msgstr "您的圖形顯示硬體在 Ubuntu 13.04 中可能未有完整支援。"
 
 #: ../DistUpgrade/DistUpgradeQuirks.py:513
 msgid ""
@@ -1134,7 +1137,7 @@ msgstr "錯誤"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:572
 msgid "&Cancel"
-msgstr ""
+msgstr "取消(&C)"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:817
 msgid "&Close"
@@ -1544,7 +1547,7 @@ msgstr "發行版升級"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:19
 msgid "<b><big>Upgrading Ubuntu to version 13.04</big></b>"
-msgstr ""
+msgstr "<b><big>將 Ubuntu 升級至 13.04 版</big></b>"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:20
 msgid "    "
