Modify demotions so that they are generated for saucy

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ ubuntu-release-upgrader (1:0.199) UNRELEASED; urgency=low
   * Drop obsolete GObject.threads_init() calls to avoid warnings.  Bump
     python-gi dependency.
   * Update release version in DistUpgradeQuirks.py (LP: #1202826)
+  * Modify demotions so that they are generated for saucy
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 12 Jul 2013 08:07:20 -0700
 
