--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:0.199) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.199) saucy; urgency=low
 
   * Drop obsolete GObject.threads_init() calls to avoid warnings.  Bump
     python-gi dependency.
@@ -7,7 +7,7 @@ ubuntu-release-upgrader (1:0.199) UNRELEASED; urgency=low
   * Modify how no_longer_supported_nag is set and fix test failure for
     test_end_of_life.py, thanks to Michael Terry.
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 12 Jul 2013 08:07:20 -0700
+ -- Brian Murray <brian@ubuntu.com>  Tue, 06 Aug 2013 13:43:33 -0700
 
 ubuntu-release-upgrader (1:0.198) saucy; urgency=low
 
