--- a/po/sv.po
+++ b/po/sv.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: update-manager\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2013-05-22 21:30+0100\n"
-"PO-Revision-Date: 2013-05-22 11:00+0000\n"
-"Last-Translator: Brian Murray <brian@ubuntu.com>\n"
+"PO-Revision-Date: 2013-08-19 22:27+0000\n"
+"Last-Translator: Joachim Johansson <Unknown>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-08-13 06:03+0000\n"
+"X-Launchpad-Export-Date: 2013-08-20 05:12+0000\n"
 "X-Generator: Launchpad (build 16723)\n"
 "Language: sv\n"
 
@@ -1277,7 +1277,7 @@ msgstr "Fel"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:572
 msgid "&Cancel"
-msgstr ""
+msgstr "&Avbryt"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:817
 msgid "&Close"
