--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.200) UNRELEASED; urgency=low
+
+  * DistUpgradeFetcher.py: Properly pass Gtk.window to error (LP: #1199984)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 21 Aug 2013 16:50:45 -0700
+
 ubuntu-release-upgrader (1:0.199) saucy; urgency=low
 
   * Drop obsolete GObject.threads_init() calls to avoid warnings.  Bump
