ubuntu-release-upgrader-gtk: depend on gir1.2-webkit-3.0 (LP: #1215526)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 ubuntu-release-upgrader (1:0.200) UNRELEASED; urgency=low
 
   * DistUpgradeFetcher.py: Properly pass Gtk.window to error (LP: #1199984)
+  * ubuntu-release-upgrader-gtk: depend on gir1.2-webkit-3.0 (LP: #1215526)
 
  -- Brian Murray <brian@ubuntu.com>  Wed, 21 Aug 2013 16:50:45 -0700
 
