--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:0.200) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.200) saucy; urgency=low
 
   * DistUpgradeFetcher.py: Properly pass Gtk.window to error (LP: #1199984)
   * ubuntu-release-upgrader-gtk: depend on gir1.2-webkit-3.0 (LP: #1215526)
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 21 Aug 2013 16:50:45 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 22 Aug 2013 09:48:10 -0700
 
 ubuntu-release-upgrader (1:0.199) saucy; urgency=low
 
