DistUpgrade/DistUpgradeController.py: Fix "alllowed" typo.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.201) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeController.py: Fix "alllowed" typo.
+
+ -- Colin Watson <cjwatson@ubuntu.com>  Thu, 29 Aug 2013 12:35:28 +0100
+
 ubuntu-release-upgrader (1:0.200) saucy; urgency=low
 
   * DistUpgradeFetcher.py: Properly pass Gtk.window to error (LP: #1199984)
