--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 ubuntu-release-upgrader (1:0.201) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * DistUpgrade/DistUpgradeController.py: Fix "alllowed" typo.
+
+  [ Brian Murray ]
+  * DistUpgrade/DevelReleaseAnnouncement: indicate that it is a Beta now
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 29 Aug 2013 12:35:28 +0100
 
