--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.202) UNRELEASED; urgency=low
+
+  * DistUpgradeQuirks.py: when removing .crash files also remove whoopsie
+    .upload and .uploaded files
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 06 Sep 2013 13:15:29 -0700
+
 ubuntu-release-upgrader (1:0.201) saucy; urgency=low
 
   [ Colin Watson ]
