Remove some additional unnecessary quirks

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ ubuntu-release-upgrader (1:0.202) UNRELEASED; urgency=low
   [ Brian Murray ]
   * DistUpgradeQuirks.py: when removing .crash files also remove whoopsie
     .upload and .uploaded files
+  * Remove some additional unnecessary quirks
 
   [ Steve Langasek ]
   * Drop all quirks for upgrades prior to the karmic->lucid upgrade; all
