--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ ubuntu-release-upgrader (1:0.202) UNRELEASED; urgency=low
 
   * DistUpgradeQuirks.py: when removing .crash files also remove whoopsie
     .upload and .uploaded files
+  * DistUpgradeCache.py: remove unhelpful system error message from upgrade
+    failure dialog (LP: #1221307)
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 06 Sep 2013 13:15:29 -0700
 
