Launchpad automatic translations update.

--- a/po/es.po
+++ b/po/es.po
@@ -11,15 +11,15 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2013-05-22 21:30+0100\n"
-"PO-Revision-Date: 2013-05-27 10:55+0000\n"
-"Last-Translator: Paco Molinero <paco@byasl.com>\n"
+"PO-Revision-Date: 2013-09-10 02:11+0000\n"
+"Last-Translator: Adolfo Jayme Barrientos <fitoschido@gmail.com>\n"
 "Language-Team: Spanish <traductores@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-09-06 06:04+0000\n"
-"X-Generator: Launchpad (build 16760)\n"
+"X-Launchpad-Export-Date: 2013-09-10 05:21+0000\n"
+"X-Generator: Launchpad (build 16761)\n"
 "Language: es\n"
 
 #. TRANSLATORS: %s is a country
@@ -236,7 +236,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeController.py:289
 msgid "Upgrading over remote connection not supported"
-msgstr "Actualizando sobre conexión remota no soportada"
+msgstr "Actualizando sobre conexión remota no compatible"
 
 #: ../DistUpgrade/DistUpgradeController.py:290
 msgid ""
