--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-ubuntu-release-upgrader (1:0.202) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.202) saucy; urgency=low
 
   * DistUpgradeQuirks.py: when removing .crash files also remove whoopsie
     .upload and .uploaded files
   * DistUpgradeCache.py: remove unhelpful system error message from upgrade
     failure dialog (LP: #1221307)
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 06 Sep 2013 13:15:29 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 09 Sep 2013 16:37:20 -0700
 
 ubuntu-release-upgrader (1:0.201) saucy; urgency=low
 
