Launchpad automatic translations update.

--- a/po/es.po
+++ b/po/es.po
@@ -11,14 +11,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2013-05-22 21:30+0100\n"
-"PO-Revision-Date: 2013-09-10 02:11+0000\n"
+"PO-Revision-Date: 2013-09-11 02:50+0000\n"
 "Last-Translator: Adolfo Jayme Barrientos <fitoschido@gmail.com>\n"
 "Language-Team: Spanish <traductores@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-09-10 05:21+0000\n"
+"X-Launchpad-Export-Date: 2013-09-11 05:17+0000\n"
 "X-Generator: Launchpad (build 16761)\n"
 "Language: es\n"
 
@@ -219,7 +219,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeController.py:126
 msgid "Reading cache"
-msgstr "Leyendo caché"
+msgstr "Leyendo la caché"
 
 #: ../DistUpgrade/DistUpgradeController.py:230
 msgid "Unable to get exclusive lock"
@@ -347,7 +347,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeController.py:472
 msgid "Package 'debsig-verify' is installed"
-msgstr "El paquete «debsig-verify» esta instalado"
+msgstr "El paquete «debsig-verify» está instalado"
 
 #: ../DistUpgrade/DistUpgradeController.py:473
 msgid ""
