test/test_sources_list.py: resolve test failure regarding EOL upgrades

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.203) UNRELEASED; urgency=low
+
+  * test/test_sources_list.py: resolve test failure regarding EOL upgrades
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 11 Sep 2013 16:06:40 -0700
+
 ubuntu-release-upgrader (1:0.202) saucy; urgency=low
 
   * DistUpgradeQuirks.py: when removing .crash files also remove whoopsie
