DistUpgrade/patches/: remove pycompile patch

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ ubuntu-release-upgrader (1:0.203) UNRELEASED; urgency=low
   * test/test_sources_list.py: resolve test failure regarding EOL upgrades
   * DistUpgradeQuirks.py: pep8 cleanup, remove some additional unnecessary
     quirks
+  * DistUpgrade/patches/: remove pycompile patch
 
   [ Steve Langasek ]
   * Drop all quirks for upgrades prior to the karmic->lucid upgrade; all
