--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:0.203) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.203) saucy; urgency=low
 
   [ Brian Murray ]
   * test/test_sources_list.py: resolve test failure regarding EOL upgrades
@@ -19,7 +19,7 @@ ubuntu-release-upgrader (1:0.203) UNRELEASED; urgency=low
     wrong results on upgrade for users of UbuntuStudio, which ships a kernel
     flavor that's not known by base-installer.  LP: #1220898.
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 11 Sep 2013 16:06:40 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 12 Sep 2013 10:38:41 -0700
 
 ubuntu-release-upgrader (1:0.202) saucy; urgency=low
 
