Properly raise UnsupportedDialog error (LP: #1210643) Thanks to Dylan McCall for some help with this.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.204) UNRELEASED; urgency=low
+
+  * Properly raise UnsupportedDialog error (LP: #1210643)
+    Thanks to Dylan McCall for some help with this.
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 13 Sep 2013 15:06:18 -0700
+
 ubuntu-release-upgrader (1:0.203) saucy; urgency=low
 
   [ Brian Murray ]
