--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 ubuntu-release-upgrader (1:0.204) UNRELEASED; urgency=low
 
-  * Properly raise UnsupportedDialog error (LP: #1210643)
-    Thanks to Dylan McCall for some help with this.
+  * Call update-manager instead of raising it's UnsupportedDialog
+    error. (LP: #1210643) Thanks to Dylan McCall for some help with this.
   * Replace references to 13.04 with 13.10 (LP: #1225665)
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 13 Sep 2013 15:06:18 -0700
