releasing package ubuntu-release-upgrader version 1:0.204

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:0.204) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.204) saucy; urgency=low
 
   * Call update-manager instead of raising it's UnsupportedDialog
     error. (LP: #1210643) Thanks to Dylan McCall for some help with this.
   * Replace references to 13.04 with 13.10 (LP: #1225665)
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 13 Sep 2013 15:06:18 -0700
+ -- Brian Murray <brian@ubuntu.com>  Tue, 17 Sep 2013 14:35:25 -0700
 
 ubuntu-release-upgrader (1:0.203) saucy; urgency=low
 
