Don't build-depend on scrollkeeper

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.205) UNRELEASED; urgency=low
+
+  * Don't build-depend on scrollkeeper
+
+ -- Jeremy Bicha <jbicha@ubuntu.com>  Thu, 19 Sep 2013 15:56:48 -0400
+
 ubuntu-release-upgrader (1:0.204) saucy; urgency=low
 
   * Call update-manager instead of raising it's UnsupportedDialog
