Launchpad automatic translations update.

--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -3,15 +3,15 @@ msgstr ""
 "Project-Id-Version: update-manager 0.41.1\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2013-05-22 21:30+0100\n"
-"PO-Revision-Date: 2013-07-20 12:06+0000\n"
-"Last-Translator: Pin-hsien Li <pspeter9931@gmail.com>\n"
+"PO-Revision-Date: 2013-09-28 16:35+0000\n"
+"Last-Translator: Walter Cheuk <wwycheuk@gmail.com>\n"
 "Language-Team: Chinese (Taiwan) <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Launchpad-Export-Date: 2013-09-24 06:33+0000\n"
-"X-Generator: Launchpad (build 16771)\n"
+"X-Launchpad-Export-Date: 2013-09-29 05:43+0000\n"
+"X-Generator: Launchpad (build 16774)\n"
 "Language: \n"
 
 #. TRANSLATORS: %s is a country
@@ -1101,25 +1101,25 @@ msgstr "<b>降級 (%s)</b>"
 #: ../DistUpgrade/DistUpgradeViewGtk3.py:646
 #, python-format
 msgid "Remove (%s)"
-msgstr "移除 (%s)"
+msgstr "移除 (%s 個)"
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:650
 #: ../DistUpgrade/DistUpgradeViewGtk3.py:647
 #, python-format
 msgid "No longer needed (%s)"
-msgstr "不再需要 (%s)"
+msgstr "不再需要 (%s 個)"
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:651
 #: ../DistUpgrade/DistUpgradeViewGtk3.py:648
 #, python-format
 msgid "Install (%s)"
-msgstr "安裝 (%s)"
+msgstr "安裝 (%s 個)"
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:652
 #: ../DistUpgrade/DistUpgradeViewGtk3.py:649
 #, python-format
 msgid "Upgrade (%s)"
-msgstr "升級 (%s)"
+msgstr "升級 (%s 個)"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:339
 msgid "Show Difference >>>"
@@ -1288,7 +1288,7 @@ msgstr "依照您的連線速率，此下載將要約 %s 的時間。 "
 #: ../DistUpgrade/DistUpgradeView.py:271
 #: ../data/gtkbuilder/DistUpgrade.ui.h:21
 msgid "Preparing to upgrade"
-msgstr "準備升級中"
+msgstr "準備升級"
 
 #: ../DistUpgrade/DistUpgradeView.py:272
 msgid "Getting new software channels"
@@ -1302,12 +1302,12 @@ msgstr "取得新套件"
 #: ../DistUpgrade/DistUpgradeView.py:274
 #: ../data/gtkbuilder/DistUpgrade.ui.h:26
 msgid "Installing the upgrades"
-msgstr "安裝升級中"
+msgstr "安裝升級"
 
 #: ../DistUpgrade/DistUpgradeView.py:275
 #: ../data/gtkbuilder/DistUpgrade.ui.h:25
 msgid "Cleaning up"
-msgstr "清理中"
+msgstr "清理"
 
 #: ../DistUpgrade/DistUpgradeView.py:360
 #, python-format
