--- a/po/tr.po
+++ b/po/tr.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: update-manager\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2013-05-22 21:30+0100\n"
-"PO-Revision-Date: 2013-05-23 02:42+0000\n"
-"Last-Translator: Hasan Yılmaz <iletisim@hasanyilmaz.net>\n"
+"PO-Revision-Date: 2013-10-03 13:37+0000\n"
+"Last-Translator: Volkan Gezer <Unknown>\n"
 "Language-Team: Turkish <tr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-09-24 06:33+0000\n"
-"X-Generator: Launchpad (build 16771)\n"
+"X-Launchpad-Export-Date: 2013-10-04 05:42+0000\n"
+"X-Generator: Launchpad (build 16791)\n"
 "Language: tr\n"
 
 #. TRANSLATORS: %s is a country
@@ -46,7 +46,7 @@ msgid ""
 "Unable to locate any package files, perhaps this is not a Ubuntu Disc or the "
 "wrong architecture?"
 msgstr ""
-"Hiçbir paket dosyası bulunamadı, bu bir Ubuntu Diski olmayabilir ya da "
+"Hiçbir paket dosyası bulunamadı, bu bir Ubuntu Diski olmayabilir veya "
 "işlemci mimarisi yanlış seçilmiş olabilir mi?"
 
 #: ../DistUpgrade/DistUpgradeAptCdrom.py:294
@@ -72,6 +72,7 @@ msgstr ""
 msgid "Remove package in bad state"
 msgid_plural "Remove packages in bad state"
 msgstr[0] "Hatalı durumdaki paketi kaldır"
+msgstr[1] "Hatalı durumdaki paketleri kaldır"
 
 #: ../DistUpgrade/DistUpgradeCache.py:154
 #, python-format
@@ -87,6 +88,10 @@ msgstr[0] ""
 "'%s' paketi tutarsız durumda ve yeniden kurulması gerekiyor, fakat bunun "
 "için herhangi bir arşiv bulunamadı. Devam etmek için bu paketi kaldırmak "
 "ister misiniz?"
+msgstr[1] ""
+"'%s' paketleri tutarsız durumda ve yeniden kurulmaları gerekiyor, fakat "
+"bunlar için herhangi bir arşiv bulunamadı. Devam etmek için bu paketleri "
+"kaldırmak ister misiniz?"
 
 #. FIXME: not ideal error message, but we just reuse a
 #. existing one here to avoid a new string
@@ -179,7 +184,7 @@ msgstr "Kara listede olan '%s' sürümü kurulmaya çalışılıyor"
 #: ../DistUpgrade/DistUpgradeCache.py:858
 #, python-format
 msgid "Can't install '%s'"
-msgstr "Yüklenemiyor: '%s'"
+msgstr "'%s' kurulamıyor"
 
 #: ../DistUpgrade/DistUpgradeCache.py:859
 msgid ""
@@ -192,7 +197,7 @@ msgstr ""
 #. FIXME: provide a list
 #: ../DistUpgrade/DistUpgradeCache.py:870
 msgid "Can't guess meta-package"
-msgstr "Üstveri-paketi tahmin edilemiyor"
+msgstr "Üstveri paketi tahmin edilemiyor"
 
 #: ../DistUpgrade/DistUpgradeCache.py:871
 msgid ""
@@ -220,7 +225,7 @@ msgid ""
 "This usually means that another package management application (like apt-get "
 "or aptitude) already running. Please close that application first."
 msgstr ""
-"Bu, genelde başka bir paket yönetimi uygulamasının (apt-get ya da aptitude "
+"Bu, genelde başka bir paket yönetimi uygulamasının (apt-get veya aptitude "
 "gibi) zaten çalıştığı anlamına gelir. Lütfen öncelikle bu uygulamayı kapatın."
 
 #: ../DistUpgrade/DistUpgradeController.py:289
@@ -273,9 +278,9 @@ msgid ""
 "started on port '%s'. If anything goes wrong with the running ssh you can "
 "still connect to the additional one.\n"
 msgstr ""
-"Hata durumunda düzeltme daha kolay olsun diye ek bir sshd '%s' portunda "
-"başlatılacak. Eğer çalışmakta olan ssh ile ilgili herhangi bir sorun "
-"oluşursa ek birine bağlanabilirsiniz.\n"
+"Hata durumunda düzeltme daha kolay olsun diye ek bir sshd '%s' bağlantı "
+"noktasında başlatılacak. Eğer çalışmakta olan ssh ile ilgili herhangi bir "
+"sorun oluşursa ek birine bağlanabilirsiniz.\n"
 
 #: ../DistUpgrade/DistUpgradeController.py:328
 #, python-format
@@ -286,8 +291,8 @@ msgid ""
 "'%s'"
 msgstr ""
 "Eğer bir güvenlik duvarı açarsanız, bu bağlantı noktasını geçici olarak "
-"açmanız gerekebilir. Tehlikeli olma ihtimalinden dolayı kendi kendine "
-"açılmaz. Bağlantı noktasını bu şekilde açabilirsiniz:\n"
+"açmanız gerekebilir. Tehlikeli olma ihtimalinden dolayı otomatik olarak "
+"yapılmamaktadır. Bağlantı noktasını bu şekilde açabilirsiniz:\n"
 "'%s'"
 
 #: ../DistUpgrade/DistUpgradeController.py:400
@@ -458,12 +463,13 @@ msgid ""
 msgstr ""
 "'sources.list' dosyasındaki bazı üçüncü taraf girdiler etkisiz hale "
 "getirildi. Yükseltmenin ardından bu girdileri 'Yazılım Kaynakları' aracını "
-"ya da paket yöneticinizi kullanarak yeniden etkinleştirebilirsiniz."
+"veya paket yöneticinizi kullanarak yeniden etkinleştirebilirsiniz."
 
 #: ../DistUpgrade/DistUpgradeController.py:870
 msgid "Package in inconsistent state"
 msgid_plural "Packages in inconsistent state"
 msgstr[0] "Paket tutarsız durumda"
+msgstr[1] "Paketler tutarsız durumda"
 
 #: ../DistUpgrade/DistUpgradeController.py:873
 #, python-format
@@ -477,8 +483,12 @@ msgid_plural ""
 "or remove them from the system."
 msgstr[0] ""
 "'%s' paketi tutarsız durumda ve tekrar kurulmalı, fakat bunun için herhangi "
-"bir arşiv bulunamadı. Lütfen paketi elle tekrar kurun ya da sistemden "
+"bir arşiv bulunamadı. Lütfen paketi elle tekrar kurun veya sistemden "
 "kaldırın."
+msgstr[1] ""
+"'%s' paketleri tutarsız durumda ve tekrar kurulmalı, fakat bunlar için "
+"herhangi bir arşiv bulunamadı. Lütfen paketleri elle tekrar kurun veya "
+"sistemden kaldırın."
 
 #: ../DistUpgrade/DistUpgradeController.py:921
 msgid "Error during update"
@@ -651,7 +661,7 @@ msgid ""
 "Preparing the system for the upgrade failed so a bug reporting process is "
 "being started."
 msgstr ""
-"Sistemi yükseltme girişimi başarısız oldu bu yüzden bir hata raporu "
+"Sistemi yükseltme girişimi başarısız olduğundan bir hata raporu "
 "oluşturuluyor."
 
 #: ../DistUpgrade/DistUpgradeController.py:1656
@@ -697,6 +707,11 @@ msgid ""
 "In the case of an overloaded mirror, you may want to try the upgrade again "
 "later."
 msgstr ""
+"Paket bilginizi güncelledikten sonra, gerekli paket '%s' konumlandırılamadı. "
+"Bunun sebebi yazılım kaynaklarınızda resmi yansıların olmaması veya "
+"kullandığınız yansılardaki aşırı yoğunluk olabilir. Yapılandırılmış yazılım "
+"kaynaklarının güncel listesi için /etc/apt/sources.list dosyasına göz atın.\n"
+"Aşırı yüklenmiş bir yansı durumunda, yükseltmeyi daha sonra tekrar deneyin."
 
 #: ../DistUpgrade/DistUpgradeController.py:1749
 #: ../DistUpgrade/DistUpgradeController.py:1805
@@ -721,7 +736,7 @@ msgstr "Yükseltme tamamlandı"
 #: ../DistUpgrade/DistUpgradeController.py:1819
 msgid ""
 "The upgrade has completed but there were errors during the upgrade process."
-msgstr "Yükseltme tamamlandı fakat yükseltme esnasında bazı hatalar oluştu."
+msgstr "Yükseltme tamamlandı, fakat yükseltme esnasında bazı hatalar oluştu."
 
 #: ../DistUpgrade/DistUpgradeController.py:1768
 msgid "Searching for obsolete software"
@@ -738,7 +753,7 @@ msgstr "Kısmi yükseltme tamamlandı."
 #: ../DistUpgrade/DistUpgradeFetcher.py:123
 #: ../DistUpgrade/DistUpgradeFetcherKDE.py:119
 msgid "Could not find the release notes"
-msgstr "Yayım notları bulunamadı"
+msgstr "Sürüm notları bulunamadı"
 
 #: ../DistUpgrade/DistUpgradeFetcher.py:124
 #: ../DistUpgrade/DistUpgradeFetcherKDE.py:120
@@ -758,12 +773,12 @@ msgstr "Lütfen internet bağlantınızı denetleyin."
 #: ../DistUpgrade/DistUpgradeFetcherCore.py:75
 #, python-format
 msgid "authenticate '%(file)s' against '%(signature)s' "
-msgstr "'%(file)s' dosyasını '%(signature)s' karşı yetkilendir "
+msgstr "'%(file)s' dosyasını '%(signature)s' imzasına karşı yetkilendir "
 
 #: ../DistUpgrade/DistUpgradeFetcherCore.py:136
 #, python-format
 msgid "extracting '%s'"
-msgstr "çıkartılıyor: '%s'"
+msgstr "'%s' çıkartılıyor"
 
 #: ../DistUpgrade/DistUpgradeFetcherCore.py:157
 #: ../DistUpgrade/DistUpgradeFetcherCore.py:158
@@ -775,8 +790,8 @@ msgid ""
 "This is most likely a bug in the upgrade tool. Please report it as a bug "
 "using the command 'ubuntu-bug ubuntu-release-upgrader-core'."
 msgstr ""
-"Burada yükseltme aracında büyük ihtimal bir hata mevcut. Bunun bir hata "
-"olduğunu izleyen komut ile bildirin lütfen; 'ubuntu-bug ubuntu-release-"
+"Bu, yükseltme aracında bulunan büyük ihtimalle bir hata. Lütfen bunun bir "
+"hata olduğunu izleyen komut ile bildirin: 'ubuntu-bug ubuntu-release-"
 "upgrader-core'."
 
 #: ../DistUpgrade/DistUpgradeFetcherCore.py:236
@@ -789,7 +804,7 @@ msgstr "Yükseltme aracı"
 
 #: ../DistUpgrade/DistUpgradeFetcherCore.py:277
 msgid "Failed to fetch"
-msgstr "İndirme başarısız"
+msgstr "Getirme başarısız"
 
 #: ../DistUpgrade/DistUpgradeFetcherCore.py:278
 msgid "Fetching the upgrade failed. There may be a network problem. "
@@ -880,7 +895,7 @@ msgstr "Dosya: %s / %s"
 #: ../DistUpgrade/DistUpgradeViewKDE.py:196
 #, python-format
 msgid "Please insert '%s' into the drive '%s'"
-msgstr "Lütfen \"%2s\" sürücüsüne \"%1s\" takın"
+msgstr "Lütfen \"%2s\" sürücüsüne \"%1s\" ortamını takın"
 
 #. change = QMessageBox.question(None, _("Media Change"), msg,
 #. QMessageBox.Ok, QMessageBox.Cancel)
@@ -907,6 +922,7 @@ msgstr ""
 #: ../DistUpgrade/DistUpgradeQuirks.py:511
 msgid "Your graphics hardware may not be fully supported in Ubuntu 13.04."
 msgstr ""
+"Grafik donanımınız Ubuntu 13.04'te tam olarak desteklenmiyor olabilir."
 
 #: ../DistUpgrade/DistUpgradeQuirks.py:248
 msgid ""
@@ -947,7 +963,7 @@ msgid ""
 "Upgrading may reduce desktop effects, and performance in games and other "
 "graphically intensive programs."
 msgstr ""
-"Yükseltme, masaüstü efektlerini, oyunların ve diğer yoğun grafik kullanan "
+"Yükseltme; masaüstü efektlerini, oyunların ve diğer yoğun grafik kullanan "
 "uygulamaların başarımını düşürebilir."
 
 #: ../DistUpgrade/DistUpgradeQuirks.py:564
@@ -1046,7 +1062,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeMain.py:75
 msgid "*DEPRECATED* this option will be ignored"
-msgstr "*DEPRECATED* bu seçenek gözardı edilebilir"
+msgstr "*KULLANILMAYAN* bu seçenek gözardı edilebilir"
 
 #: ../DistUpgrade/DistUpgradeMain.py:78
 msgid "Perform a partial upgrade only (no sources.list rewriting)"
@@ -1112,7 +1128,7 @@ msgstr "bağımlılık sorunları - yapılandırılmadan çıkılıyor"
 #: ../DistUpgrade/DistUpgradeViewKDE.py:281
 #, python-format
 msgid "Could not install '%s'"
-msgstr "Kurulamadı: '%s'"
+msgstr "'%s' kurulamadı"
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:216
 #: ../DistUpgrade/DistUpgradeViewGtk3.py:219
@@ -1134,8 +1150,8 @@ msgid ""
 "Replace the customized configuration file\n"
 "'%s'?"
 msgstr ""
-"Özelleştirilmiş yapılandırma dosyasını değiştir:\n"
-"'%s'?"
+"Özelleştirilmiş yapılandırma dosyası\n"
+"'%s' değiştirilsin mi?"
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:234
 #: ../DistUpgrade/DistUpgradeViewGtk3.py:237
@@ -1176,7 +1192,7 @@ msgstr ""
 #: ../DistUpgrade/DistUpgradeViewGtk.py:484
 #: ../DistUpgrade/DistUpgradeViewGtk3.py:496
 msgid "Ctrl-c pressed"
-msgstr "Ctrl-c basıldı"
+msgstr "Ctrl-c'ye basıldı"
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:485
 #: ../DistUpgrade/DistUpgradeViewGtk3.py:497
@@ -1244,7 +1260,7 @@ msgstr "Hata"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:572
 msgid "&Cancel"
-msgstr ""
+msgstr "&İptal"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:817
 msgid "&Close"
@@ -1272,7 +1288,7 @@ msgstr "Ayrıntılar"
 #: ../DistUpgrade/DistUpgradeViewKDE.py:781
 #, python-format
 msgid "No longer supported %s"
-msgstr "Artık desteklenmiyor: %s"
+msgstr "%s artık desteklenmiyor"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:783
 #, python-format
@@ -1319,36 +1335,41 @@ msgid ""
 "strongly advised to resume the upgrade."
 msgstr ""
 "<b><big>Devam eden yükseltmeden vazgeçmek mi istiyorsunuz ?</big></b>\n"
+"\n"
 "Yükseltmeden vazgeçerseniz sistem kulanılamaz duruma gelebilir. Yükseltmeye "
 "devam etmenizi öneriyoruz."
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:838
 msgid "Cancel Upgrade?"
-msgstr "Yükseltmeden Vazgeç?"
+msgstr "Yükseltme İptal Edilsin mi?"
 
 #: ../DistUpgrade/DistUpgradeView.py:73
 #, python-format
 msgid "%li day"
 msgid_plural "%li days"
 msgstr[0] "%li gün"
+msgstr[1] "%li gün"
 
 #: ../DistUpgrade/DistUpgradeView.py:75
 #, python-format
 msgid "%li hour"
 msgid_plural "%li hours"
 msgstr[0] "%li saat"
+msgstr[1] "%li saat"
 
 #: ../DistUpgrade/DistUpgradeView.py:77
 #, python-format
 msgid "%li minute"
 msgid_plural "%li minutes"
 msgstr[0] "%li dakika"
+msgstr[1] "%li dakika"
 
 #: ../DistUpgrade/DistUpgradeView.py:78
 #, python-format
 msgid "%li second"
 msgid_plural "%li seconds"
 msgstr[0] "%li saniye"
+msgstr[1] "%li saniye"
 
 #. TRANSLATORS: you can alter the ordering of the remaining time
 #. information here if you shuffle %(str_days)s %(str_hours)s %(str_minutes)s
@@ -1393,8 +1414,7 @@ msgstr ""
 #: ../DistUpgrade/DistUpgradeView.py:167
 #, python-format
 msgid "This download will take about %s with your connection. "
-msgstr ""
-"Bu indirme işlemi sizin bağlantınızla yaklaşık olarak %s kadar sürecektir. "
+msgstr "Bu indirme işlemi sizin bağlantınızla yaklaşık %s sürecektir. "
 
 #. Declare these translatable strings from the .ui files here so that
 #. xgettext picks them up.
@@ -1433,6 +1453,9 @@ msgid_plural ""
 msgstr[0] ""
 "Kurulu %(amount)d paket artık Canonical tarafından desteklenmiyor. Topluluk "
 "tarafından hala destek alabilirsiniz."
+msgstr[1] ""
+"Kurulu %(amount)d paket artık Canonical tarafından desteklenmiyor. Topluluk "
+"tarafından hala destek alabilirsiniz."
 
 #. FIXME: make those two separate lines to make it clear
 #. that the "%" applies to the result of ngettext
@@ -1441,18 +1464,21 @@ msgstr[0] ""
 msgid "%d package is going to be removed."
 msgid_plural "%d packages are going to be removed."
 msgstr[0] "%d paket kaldırılacak."
+msgstr[1] "%d paket kaldırılacak."
 
 #: ../DistUpgrade/DistUpgradeView.py:374
 #, python-format
 msgid "%d new package is going to be installed."
 msgid_plural "%d new packages are going to be installed."
 msgstr[0] "%d yeni paket kurulacak."
+msgstr[1] "%d yeni paket yüklenecek."
 
 #: ../DistUpgrade/DistUpgradeView.py:380
 #, python-format
 msgid "%d package is going to be upgraded."
 msgid_plural "%d packages are going to be upgraded."
 msgstr[0] "%d paket yükseltilecek."
+msgstr[1] "%d paket yükseltilecek."
 
 #: ../DistUpgrade/DistUpgradeView.py:388
 #, python-format
@@ -1586,7 +1612,7 @@ msgstr "Yükselt: %s\n"
 
 #: ../DistUpgrade/DistUpgradeViewText.py:222
 msgid "Continue [Yn] "
-msgstr "Devam [Yn] "
+msgstr "Devam [Eh] "
 
 #: ../DistUpgrade/DistUpgradeViewText.py:243
 msgid ""
@@ -1671,7 +1697,7 @@ msgstr "Dağıtım Yükseltimi"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:19
 msgid "<b><big>Upgrading Ubuntu to version 13.04</big></b>"
-msgstr ""
+msgstr "<b><big>Ubuntu'yu 13.04 sürümüne yükseltme</big></b>"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:20
 msgid "    "
