releasing package ubuntu-release-upgrader version 1:0.205

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:0.205) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.205) saucy; urgency=low
 
   * Instead of using gksu to authenticate for the distribution upgrade, use
     do-release-upgrade with pkexec (LP: #1210649)
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 04 Oct 2013 19:12:43 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 04 Oct 2013 19:17:49 -0700
 
 ubuntu-release-upgrader (1:0.204) saucy; urgency=low
 
