Remove lubuntu-desktop PostUpgradeRemove rule as it is unnecessary (LP: #1241123)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.206) UNRELEASED; urgency=low
+
+  * Remove lubuntu-desktop PostUpgradeRemove rule as it is unnecessary
+    (LP: #1241123)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 18 Oct 2013 13:02:54 -0700
+
 ubuntu-release-upgrader (1:0.205) saucy; urgency=low
 
   * Instead of using gksu to authenticate for the distribution upgrade, use
