Replace references to Saucy with Trusty

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ ubuntu-release-upgrader (1:0.206) UNRELEASED; urgency=low
 
   * Remove lubuntu-desktop PostUpgradeRemove rule as it is unnecessary
     (LP: #1241123)
+  * Replace references to Saucy with Trusty
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 18 Oct 2013 13:02:54 -0700
 
