releasing package ubuntu-release-upgrader version 1:0.206

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:0.206) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.206) trusty; urgency=low
 
   * Remove lubuntu-desktop PostUpgradeRemove rule as it is unnecessary
     (LP: #1241123)
   * Replace references to Saucy with Trusty
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 18 Oct 2013 13:02:54 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 21 Oct 2013 09:31:39 -0700
 
 ubuntu-release-upgrader (1:0.205) saucy; urgency=low
 
