releasing package ubuntu-release-upgrader version 1:0.207

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ubuntu-release-upgrader (1:0.207) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.207) trusty; urgency=low
 
   * Support saucy->trusty upgrades.
 
- -- Steve Langasek <steve.langasek@ubuntu.com>  Tue, 22 Oct 2013 18:57:10 -0700
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Wed, 23 Oct 2013 02:42:08 +0000
 
 ubuntu-release-upgrader (1:0.206) trusty; urgency=low
 
