--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.208) UNRELEASED; urgency=low
+
+  [ Brian Murray ]
+  * Synchronize the list of metapackages used in the code.  LP: #1225016.
+
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Tue, 22 Oct 2013 20:13:25 -0700
+
 ubuntu-release-upgrader (1:0.207) trusty; urgency=low
 
   * Support saucy->trusty upgrades.
