--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ ubuntu-release-upgrader (1:0.208) UNRELEASED; urgency=low
 
   [ Brian Murray ]
   * Synchronize the list of metapackages used in the code.  LP: #1225016.
+  * Properly display error messages encountered by DistUpgradeFetcherCore.
+    (LP: #1241660)
 
  -- Steve Langasek <steve.langasek@ubuntu.com>  Tue, 22 Oct 2013 20:13:25 -0700
 
