DistUpgrade/DistUpgradeCache.py: Do not initialize the cache until we know it is unlocked.  (LP: #1214186)

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ ubuntu-release-upgrader (1:0.208) UNRELEASED; urgency=low
   * Synchronize the list of metapackages used in the code.  LP: #1225016.
   * Properly display error messages encountered by DistUpgradeFetcherCore.
     (LP: #1241660)
+  * DistUpgrade/DistUpgradeCache.py: Do not initialize the cache until we know
+    it is unlocked.  (LP: #1214186)
 
- -- Steve Langasek <steve.langasek@ubuntu.com>  Tue, 22 Oct 2013 20:13:25 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 25 Oct 2013 08:02:52 -0700
 
 ubuntu-release-upgrader (1:0.207) trusty; urgency=low
 
