--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:0.208) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.208) trusty; urgency=low
 
   [ Brian Murray ]
   * Synchronize the list of metapackages used in the code.  LP: #1225016.
@@ -7,7 +7,7 @@ ubuntu-release-upgrader (1:0.208) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeCache.py: Do not initialize the cache until we know
     it is unlocked.  (LP: #1214186)
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 25 Oct 2013 08:02:52 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 25 Oct 2013 09:17:56 -0700
 
 ubuntu-release-upgrader (1:0.207) trusty; urgency=low
 
