releasing package ubuntu-release-upgrader version 1:0.209

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-ubuntu-release-upgrader (1:0.209) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.209) trusty; urgency=low
 
+  [ Jean-Baptiste Lallement ]
   * Add data/DistUpgrade.cfg.precise to support Precise to Trusty upgrades.
     (LP: #1245469)
 
- -- Jean-Baptiste Lallement <jean-baptiste.lallement@canonical.com>  Tue, 29 Oct 2013 10:28:58 +0100
+ -- Brian Murray <brian@ubuntu.com>  Tue, 29 Oct 2013 10:18:07 -0700
 
 ubuntu-release-upgrader (1:0.208) trusty; urgency=low
 
