Launchpad automatic translations update.

--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -3,14 +3,14 @@ msgstr ""
 "Project-Id-Version: update-manager 0.41.1\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2013-05-22 21:30+0100\n"
-"PO-Revision-Date: 2013-10-27 01:16+0000\n"
-"Last-Translator: Roy Chan <roy.chan@linux.org.hk>\n"
+"PO-Revision-Date: 2013-11-13 06:19+0000\n"
+"Last-Translator: Walter Cheuk <wwycheuk@gmail.com>\n"
 "Language-Team: Chinese (Hong Kong) <zh_HK@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Launchpad-Export-Date: 2013-11-06 05:46+0000\n"
+"X-Launchpad-Export-Date: 2013-11-14 06:25+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 "Language: zh_HK\n"
 
@@ -75,7 +75,7 @@ msgid_plural ""
 "The packages '%s' are in an inconsistent state and need to be reinstalled, "
 "but no archives can be found for them. Do you want to remove these packages "
 "now to continue?"
-msgstr[0] "這個套件 '%s' 狀態不一致而需要重新安裝，但找不到它的存檔。您想移除這個套件然後繼續嗎？"
+msgstr[0] "這個套件 '%s' 狀態不一致而需要重新安裝，但找不到其存檔。要移除這個套件然後繼續嗎？"
 
 #. FIXME: not ideal error message, but we just reuse a
 #. existing one here to avoid a new string
@@ -210,7 +210,7 @@ msgid ""
 "\n"
 "The upgrade will abort now. Please try without ssh."
 msgstr ""
-"您正在透過遠端 ssh 連線的前端介面執行更新，而此介面不支援。請試試純文字模式下以 'do-release-upgrade' 進行更新。\n"
+"正在透過遠端 ssh 連線的前端介面執行更新，而此介面不支援。請試試純文字模式下以 'do-release-upgrade' 進行更新。\n"
 "\n"
 "目前更新將會中止。請透過非 ssh 連線重試。"
 
@@ -1133,7 +1133,7 @@ msgstr "錯誤"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:572
 msgid "&Cancel"
-msgstr ""
+msgstr "取消(&C)"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:817
 msgid "&Close"
@@ -1196,7 +1196,7 @@ msgstr "<b><big>升級會在重新啟動系統後完成</big></b>"
 #: ../DistUpgrade/DistUpgradeViewKDE.py:816
 #: ../data/gtkbuilder/DistUpgrade.ui.h:14
 msgid "_Restart Now"
-msgstr "立即重新啟動(_R)"
+msgstr "馬上重新啟動(_R)"
 
 #. FIXME make this user friendly
 #: ../DistUpgrade/DistUpgradeViewKDE.py:834
@@ -1382,7 +1382,7 @@ msgstr "需要重新開機"
 #: ../DistUpgrade/DistUpgradeView.py:422
 msgid ""
 "The upgrade is finished and a reboot is required. Do you want to do this now?"
-msgstr "升級已經完成及需要重新啟動。現在要重新啟動嗎？"
+msgstr "升級已經完成及需要重新啟動。要馬上重新啟動嗎？"
 
 #: ../DistUpgrade/DistUpgradeViewText.py:101
 msgid ""
@@ -1580,7 +1580,7 @@ msgstr "稍後再問我"
 
 #: ../data/gtkbuilder/UpgradePromptDialog.ui.h:4
 msgid "Yes, Upgrade Now"
-msgstr "是，現在升級"
+msgstr "是，馬上升級"
 
 #: ../data/gtkbuilder/UpgradePromptDialog.ui.h:5
 msgid "You have declined to upgrade to the new Ubuntu"
