Launchpad automatic translations update.

--- a/po/cs.po
+++ b/po/cs.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: update-manager\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2013-05-22 21:30+0100\n"
-"PO-Revision-Date: 2013-05-23 02:43+0000\n"
-"Last-Translator: Vojtěch Trefný <vojtech.trefny@gmail.com>\n"
+"PO-Revision-Date: 2013-12-16 20:46+0000\n"
+"Last-Translator: Tadeáš Pařík <tadeas.parik@gmail.com>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2013-12-13 06:38+0000\n"
+"X-Launchpad-Export-Date: 2013-12-17 06:11+0000\n"
 "X-Generator: Launchpad (build 16869)\n"
 "Language: cs\n"
 
@@ -719,6 +719,11 @@ msgid ""
 "In the case of an overloaded mirror, you may want to try the upgrade again "
 "later."
 msgstr ""
+"Po aktualizaci informací o balíčcích nebyl nalezen nezbytný balík '%s'. To "
+"může být způsobeno tím, že máte ve Zdrojích softwaru  neoficiální zrcadla a "
+"nebo kvůli přetížení zrcadla, které používáte. Prohlédněte "
+"/etc/apt/sources.list pro aktuální seznam zdrojů softwaru.\n"
+"V případě přetíženého zrcadla zkuste provést aktualizaci později."
 
 #: ../DistUpgrade/DistUpgradeController.py:1749
 #: ../DistUpgrade/DistUpgradeController.py:1805
@@ -927,7 +932,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeQuirks.py:511
 msgid "Your graphics hardware may not be fully supported in Ubuntu 13.04."
-msgstr ""
+msgstr "Váš grafický hardware nemusí být v Ubuntu 13.04 plně podporován."
 
 #: ../DistUpgrade/DistUpgradeQuirks.py:248
 msgid ""
@@ -1263,7 +1268,7 @@ msgstr "Chyba"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:572
 msgid "&Cancel"
-msgstr ""
+msgstr "&Zrušit"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:817
 msgid "&Close"
@@ -1711,7 +1716,7 @@ msgstr "Přechod na vyšší verzi distribuce"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:19
 msgid "<b><big>Upgrading Ubuntu to version 13.04</big></b>"
-msgstr ""
+msgstr "<b><big>Probíhá přechod na Ubuntu 13.04</big></b>"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:20
 msgid "    "
