releasing package ubuntu-release-upgrader version 1:0.211

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:0.211) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:0.211) trusty; urgency=medium
 
   * DistUpgrade/DistUpgradeFetcherCore.py: set inheritance of file descriptors
     for python3.4 (LP: #1272387)
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 24 Feb 2014 16:12:25 -0800
+ -- Brian Murray <brian@ubuntu.com>  Mon, 24 Feb 2014 16:28:23 -0800
 
 ubuntu-release-upgrader (1:0.210) trusty; urgency=low
 
