releasing package ubuntu-release-upgrader version 1:0.212

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.212) trusty; urgency=medium
+
+  * tests/test_quirks.py: Only run fglrx tests on amd64 and i386 
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 27 Feb 2014 15:05:32 -0800
+
 ubuntu-release-upgrader (1:0.211) trusty; urgency=medium
 
   * DistUpgrade/DistUpgradeFetcherCore.py: set inheritance of file descriptors
