DistUpgrade/DistUpgradeController.py: Catch exception if apport is not installed and fail gracefully. Thanks to Jean-Baptiste Lallement for the initial patch. (LP: #1285545)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:0.213) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py: Catch exception if apport is not
+    installed and fail gracefully. Thanks to Jean-Baptiste Lallement for the
+    initial patch. (LP: #1285545)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 05 Mar 2014 10:54:28 -0800
+
 ubuntu-release-upgrader (1:0.212) trusty; urgency=medium
 
   * tests/test_quirks.py: Only run fglrx tests on amd64 and i386 
