DistUpgrade/DistUpgradeQuirks.py: On 12.04 stop the upgrade process if the system does not support PAE. Thanks to Chris Bainbridge for the initial patch. (LP: #1160346)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:0.214) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeQuirks.py: On 12.04 stop the upgrade process if the
+    system does not support PAE. Thanks to Chris Bainbridge for the initial
+    patch. (LP: #1160346)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 05 Mar 2014 11:55:06 -0800
+
 ubuntu-release-upgrader (1:0.213) trusty; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py: Catch exception if apport is not
