debian/control.py: depend on python-apport since DistUpgradeApport.py imports it and the release upgrader does not use python3 (LP: #1289604)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ ubuntu-release-upgrader (1:0.215) UNRELEASED; urgency=medium
 
   * do-release-upgrade: indicate that -p and -d switches are mutually
     exclusive (LP: #1071025)
+  * debian/control.py: depend on python-apport since DistUpgradeApport.py
+    imports it and the release upgrader does not use python3 (LP: #1289604)
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 07 Mar 2014 08:58:53 -0800
 
