debian/source_ubuntu-release-upgrader.py: create a DuplicateSignature by stripping out the tmpdir from the Traceback (LP: #1289850)

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ ubuntu-release-upgrader (1:0.215) UNRELEASED; urgency=medium
     exclusive (LP: #1071025)
   * debian/control.py: depend on python-apport since DistUpgradeApport.py
     imports it and the release upgrader does not use python3 (LP: #1289604)
+  * debian/source_ubuntu-release-upgrader.py: create a DuplicateSignature by
+    stripping out the tmpdir from the Traceback (LP: #1289850)
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 07 Mar 2014 08:58:53 -0800
 
