Launchpad automatic translations update.

--- a/po/ko.po
+++ b/po/ko.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: update-manager\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2013-05-22 21:30+0100\n"
-"PO-Revision-Date: 2013-05-23 02:43+0000\n"
+"PO-Revision-Date: 2014-03-16 18:07+0000\n"
 "Last-Translator: Kim Boram <boramism@gmail.com>\n"
 "Language-Team: Korean <ko@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Launchpad-Export-Date: 2014-03-15 07:24+0000\n"
+"X-Launchpad-Export-Date: 2014-03-17 05:07+0000\n"
 "X-Generator: Launchpad (build 16963)\n"
 "Language: ko\n"
 
@@ -81,7 +81,7 @@ msgid_plural ""
 "but no archives can be found for them. Do you want to remove these packages "
 "now to continue?"
 msgstr[0] ""
-"'%s' 패키지는 불완전한 상태이며 다시 설치해야 하지만, 저장소에서 찾을 수 없습니다.이 패키지를 제거한 후 계속하시겠습니까?"
+"'%s' 패키지는 불완전한 상태이며 다시 설치해야 하지만, 저장소에서 찾을 수 없습니다. 이 패키지를 제거한 후 계속하시겠습니까?"
 
 #. FIXME: not ideal error message, but we just reuse a
 #. existing one here to avoid a new string
@@ -651,6 +651,10 @@ msgid ""
 "In the case of an overloaded mirror, you may want to try the upgrade again "
 "later."
 msgstr ""
+"패키지 정보를 업데이트한 후 핵심 패키지'%s'을(를) 찾을 수 없습니다..소프트웨어에 공식 미러가 없거나 사용 중인 미러에 과부하로 "
+"인해 발생할 수 있습니다. /etc/apt/sources.list 파일을 통해 현재 목록에 설정된 소스프ㅌ웨어 소스를 확인할 수 "
+"있습니다.\n"
+"과도한 부하로 인해 발생한 경우에는 잠시 후 다시 업그레이드를  시작해주십시오."
 
 #: ../DistUpgrade/DistUpgradeController.py:1784
 #: ../DistUpgrade/DistUpgradeController.py:1840
@@ -853,7 +857,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeQuirks.py:511
 msgid "Your graphics hardware may not be fully supported in Ubuntu 13.04."
-msgstr ""
+msgstr "사용자의 그래픽 하드웨어가 우분투 13.04를 완벽하게 지원하지 않을 수 있습니다."
 
 #: ../DistUpgrade/DistUpgradeQuirks.py:249
 msgid ""
@@ -1168,7 +1172,7 @@ msgstr "오류"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:572
 msgid "&Cancel"
-msgstr ""
+msgstr "취소 (&C)"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:817
 msgid "&Close"
@@ -1335,7 +1339,7 @@ msgstr "새 패키지를 가져오는 중"
 #: ../DistUpgrade/DistUpgradeView.py:274
 #: ../data/gtkbuilder/DistUpgrade.ui.h:26
 msgid "Installing the upgrades"
-msgstr "업그레이드를 까는 중"
+msgstr "업그레이드 설치하는 중"
 
 #: ../DistUpgrade/DistUpgradeView.py:275
 #: ../data/gtkbuilder/DistUpgrade.ui.h:25
@@ -1578,7 +1582,7 @@ msgstr "배포판 업그레이드"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:19
 msgid "<b><big>Upgrading Ubuntu to version 13.04</big></b>"
-msgstr ""
+msgstr "<b><big>우분투를 13.04 버전으로 업그레이드</big></b>"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:20
 msgid "    "
