debian/91-release-upgrade: if using the development release don't check for a new release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.217) UNRELEASED; urgency=medium
+
+  * debian/91-release-upgrade: if using the development release don't check
+    for a new release.
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 17 Mar 2014 14:59:52 -0700
+
 ubuntu-release-upgrader (1:0.216.1) trusty; urgency=medium
 
   * debian/control: do not depend on python3-apport as this recommends apport
