releasing package ubuntu-release-upgrader version 1:0.217

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:0.217) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:0.217) trusty; urgency=medium
 
   * debian/91-release-upgrade: if using the development release don't check
     for a new release.
   * include new version of python-apt's sourceslist.py (LP: #1278280)
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 17 Mar 2014 14:59:52 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 17 Mar 2014 16:30:41 -0700
 
 ubuntu-release-upgrader (1:0.216.1) trusty; urgency=medium
 
