DistUpgrade/DistUpgradeQuirks.py: only check for PAE support on i386 or amd64 systems. (LP: #1294392)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.219) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeQuirks.py: only check for PAE support on i386 or
+    amd64 systems. (LP: #1294392)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 21 Mar 2014 14:17:09 -0700
+
 ubuntu-release-upgrader (1:0.218) trusty; urgency=medium
 
   * DistUpgrade/DistUpgradeApport.py: for crashes in the release upgrader
