DistUpgrade/DevelReleaseAnnouncement: Stop using "alpha" or "beta" in the devel release warning, and use more generic devel wording.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.219.2) trusty; urgency=medium
+
+  * DistUpgrade/DevelReleaseAnnouncement: Stop using "alpha" or "beta"
+    in the devel release warning, and use more generic devel wording.
+
+ -- Adam Conrad <adconrad@ubuntu.com>  Fri, 28 Mar 2014 16:14:44 -0600
+
 ubuntu-release-upgrader (1:0.219.1) trusty; urgency=medium
 
   * DistUpgrade/DistUpgradeApport.py: if we are running with a display set
