releasing package ubuntu-release-upgrader version 1:0.219.3

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+ubuntu-release-upgrader (1:0.219.3) trusty; urgency=low
+
+  * DistUpgrade/DistUpgradeView.py:
+    - do not crash if a pkg is in Reinstall state (e.g. from 
+      pkgApplyStatus) LP: #1294124
+  * DistUpgrade/DistUpgradeViewGtk3.py:
+    - disable plugins in html webkit view
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 07 Apr 2014 14:07:10 +0200
+
 ubuntu-release-upgrader (1:0.219.2) trusty; urgency=medium
 
   * DistUpgrade/DevelReleaseAnnouncement: Stop using "alpha" or "beta"
