* pre-build.sh:   - calculate demotions from saucy->trusty and precise->trusty

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ ubuntu-release-upgrader (1:0.219.3) trusty; urgency=low
       pkgApplyStatus) LP: #1294124
   * DistUpgrade/DistUpgradeViewGtk3.py:
     - disable plugins in html webkit view
+  * pre-build.sh:
+    - calculate demotions from saucy->trusty and precise->trusty
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 07 Apr 2014 14:07:10 +0200
 
