* data/release-upgrades:   - set the default upgrade prompt to "lts" instead of "normal" so that     the LTS users will only see the automatic upgrade prompt when the     next LTS version is ready * fix pylfakes issue

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+ubuntu-release-upgrader (1:0.219.4) trusty; urgency=low
+
+  * data/release-upgrades:
+    - set the default upgrade prompt to "lts" instead of "normal" so that
+      the LTS users will only see the automatic upgrade prompt when the
+      next LTS version is ready
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 08 Apr 2014 09:12:55 +0200
+
 ubuntu-release-upgrader (1:0.219.3) trusty; urgency=low
 
   * DistUpgrade/DistUpgradeView.py:
@@ -7,6 +16,7 @@ ubuntu-release-upgrader (1:0.219.3) trusty; urgency=low
     - disable plugins in html webkit view
   * pre-build.sh:
     - calculate demotions from saucy->trusty and precise->trusty
+  * fix pylfakes issue
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 07 Apr 2014 14:07:10 +0200
 
