fix error message in motd on fresh install (LP: #1306673)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.220.1) trusty; urgency=low
+
+  * fix error message in motd on fresh install (LP: #1306673)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 11 Apr 2014 17:59:31 +0200
+
 ubuntu-release-upgrader (1:0.220) trusty; urgency=low
 
   * DistUpgrade/DistUpgradeCache.py: 
