* DistUpgrade/DistUpgradeController.py:   - really backup sources.list first (LP: #1276931)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.220.2) trusty; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py:
+    - really backup sources.list first (LP: #1276931)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 11 Apr 2014 15:25:07 -0700
+
 ubuntu-release-upgrader (1:0.220.1) trusty; urgency=low
 
   * fix error message in motd on fresh install (LP: #1306673)
