* po/{eo,id,ug}.po:   - fix translations of check-new-release-gtk which cause a crash     (LP: #1311396)

--- a/po/eo.po
+++ b/po/eo.po
@@ -1834,7 +1834,7 @@ msgstr "Rulu 'do-release-upgrade' por ĝisdatigi al ĝi"
 
 #: ../check-new-release-gtk:113
 msgid "Ubuntu %(version)s Upgrade Available"
-msgstr "Ĝisdatigoj por Ubuntu %(version) disponeblas"
+msgstr "Ĝisdatigoj por Ubuntu %(version)s disponeblas"
 
 #: ../check-new-release-gtk:144
 #, c-format
