--- a/po/id.po
+++ b/po/id.po
@@ -1802,7 +1802,7 @@ msgstr "Jalankan 'do-release-upgrade' untuk meningkatkannya."
 
 #: ../check-new-release-gtk:113
 msgid "Ubuntu %(version)s Upgrade Available"
-msgstr "Peningkatan ke Ubuntu %(version) Tersedia"
+msgstr "Peningkatan ke Ubuntu %(version)s Tersedia"
 
 #: ../check-new-release-gtk:144
 #, c-format
