--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ ubuntu-release-upgrader (1:0.220.3) UNRELEASED; urgency=low
 
   * DistUpgrade/DistUpgradeCache.py:
     - fix crash in free space check for certain locales (LP: #1172740)
+  * po/{eo,id,ug}.po:
+    - fix translations of check-new-release-gtk which cause a crash
+      (LP: #1311396)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 24 Apr 2014 13:21:25 +0200
 
