fix str/unicode crash in certain locales when a package is found in the removal blacklist (LP: #1310053)

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ ubuntu-release-upgrader (1:0.220.3) trusty-proposed; urgency=low
     - fix crash in free space check for certain locales (LP: #1172740)
     - removal of essential packages that are not in the main arch
       is ok (LP: #1307904)
+    - fix str/unicode crash in certain locales when a package is
+      found in the removal blacklist (LP: #1310053)
   * DistUpgrade/DistUpgradeViewGtk3.py:
    - make details dialog resize when details are expanded/collapsed 
      (LP: #1072460)
